# rinha-de-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.host-network.yml  docker-compose.otel.yml  docker-compose.without-cache.yml  docker-compose.yml  init.sql  nginx.host-network.conf  otel-collector-config-connector.yml  postgresql.conf  prometheus.yml  start.sh
api/: .env  Cargo.toml  build.rs
api/proto/: rinha.proto
api/server/: Cargo.toml  build.rs
api/server/src/: lib.rs
api/server/src/handlers/: pessoa.rs
api/server/src/models/: pessoa.rs
api/server/src/utils/: app_state.rs  env.rs
api/src/: main.rs
api/src/handlers/: mod.rs  pessoa.rs
api/src/models/: pessoa.rs
api/src/utils/: app_state.rs  env.rs  mod.rs  telemetry.rs
docker/: api.Dockerfile  intermediary_api.Dockerfile  node_api.Dockerfile
intermediary_api/: .env  Cargo.toml  build.rs
intermediary_api/proto/: rinha.proto
intermediary_api/rinha_grpc_server/: Cargo.toml
intermediary_api/rinha_grpc_server/src/: lib.rs  with_cache.rs  without_cache.rs
intermediary_api/rinha_grpc_server/src/models/: pessoa.rs
intermediary_api/src/: main.rs
intermediary_api/src/models/: pessoa.rs
intermediary_api/src/utils/: env.rs  mod.rs
