[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres"] }
actix-web = "4"
tracing-subscriber = { version =  "0.3.17", features = ["registry", "env-filter"] }
tracing = "0.1.37"
tracing-actix-web = { version = "0.7.6", features = ["opentelemetry_0_19"]  }
actix-cors = "0.6.4"
dotenv = "0.15.0"
serde = "1.0.188"
serde_json = "1.0.105"
chrono = "0.4.26"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
deadqueue = { version = "0.2.4", features = ["unlimited"] }
tokio = { version = "1.32.0", features = ["full"] }
redis = "0.23.2"
deadpool-redis = "0.12.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.20.0"
tracing-bunyan-formatter = "0.3.9"
opentelemetry-otlp = "0.13.0"


