[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "server"]

[dependencies]
server = { path = "server", features = ["without_cache"] }
actix-web = "4"
sql-builder = "3.1.1"
