[package]
name = "intermediary_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres"] }
dotenv = "0.15.0"
serde = "1.0.188"
serde_json = "1.0.105"
chrono = "0.4.26"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
deadqueue = { version = "0.2.4", features = ["unlimited"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
tower-http = { version = "0.4.3", features = ["trace"]}

[build-dependencies]
tonic-build =  "0.9.2"
